--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,6 @@ baseURL = 'https://longnnt.github.io/hugo-ws1/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'hugo-theme-learn'
-landingPageURL = 'https://longnnt.github.io/hugo-ws1/'
 
 [params]
   # Prefix URL to edit current page. Will display an "Edit this page" button on top right hand corner of every page.
@@ -45,7 +44,8 @@ landingPageURL = 'https://longnnt.github.io/hugo-ws1/'
   custom_css = ["css/foo.css", "css/bar.css"]
   # Change the title separator. Default to "::".
   titleSeparator = "-"
-
+  # landing page url
+  landingPageURL = 'https://longnnt.github.io/hugo-ws1/'
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
